# fwupd

./: meson.build  meson_options.txt
libfwupdplugin/: fu-block-device.c  fwupdplugin.map
plugins/: meson.build
plugins/dd/: README.md  dd.quirk  fu-dd-device.c  fu-dd-device.h  fu-plugin-dd.c  meson.build
plugins/infinitime/: README.md  fu-infinitime-device.c  fu-infinitime-device.h  fu-plugin-infinitime.c  meson.build
plugins/uf2/: README.md  fu-uf2-device.c  uf2.quirk
src/: fu-udisks-backend.c
